--- a/react/src/components/Sidebar.module.css
+++ b/react/src/components/Sidebar.module.css
@@ -59,4 +59,9 @@
    display: flex;
    align-items: center;
    justify-content: center;
+
+
+   gap: 0.5rem;
+
+   transition: color 0.2s,background-color 0.2s;
 }
