--- a/react/src/components/Post.module.css
+++ b/react/src/components/Post.module.css
@@ -45,17 +45,6 @@
     gap: 1rem;
 }
 
-.author img{
-    box-sizing: initial;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 8px;
-    border: 4px solid var(--gray-800);
-    outline: 2px solid var(--green-500);
-}
-
-
-
 .authorInfo strong{
     display: block;
     color: var(--gray-100);
@@ -118,8 +107,13 @@
    transition: background-color 0.2s;
 }
 
-.commentForm button[type=submit]:hover {
+.commentForm button[type=submit]:hover:not(:disabled) {
     background: var(--green-300);
+}
+
+.commentForm button[type=submit]:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
 }
 
 .commentList {
